# BasaltPass

./: .env.example  .gitignore  .release-sync-ignore  404.html  BASALTPASS_SECURITY_AUDIT_REPORT_2026-03-19.md  BEANCS_SYSTEM_DEPLOY.md  DEPLOYMENT.md  Development.md  MARKET_PREFIX_CHANGES.md  OAuth2_Integration_Guide.md  PHONE_E164_MIGRATION.md  README.md  SECURITY_ENHANCEMENT_COMPLETE.md  TENANT_ISOLATION_COMPLETED.md  backend.Dockerfile  dev_output.txt  docker-compose.yml  email-preview.html  frontend.Dockerfile  go.mod  gosec-results.txt  index.html  project.meta.json  security-test.html  sitemap.xml  test-server.js  test_auth_status.ps1  test_coupon_api.ps1  test_fixed_coupon_api.ps1  test_order_flow.ps1  test_subscription_checkout.ps1  tsconfig.json
.basalt/: app.json  resources.json
.devcontainer/: devcontainer.json
.github/: cicd-images.json
basaltpass-backend/: .env.example  README.md  SECURITY_REVIEW_README.md  basaltpass.db  basaltpass.db.backup.20260204_043042  basaltpass.db.backup.20260204_043745  basaltpass.db.backup.20260204_044527  basaltpass.db.backup.20260204_045038  basaltpass.db.backup.20260204_045524  basaltpass.db.backup.20260204_051421  check_tables.go  config.example.yaml  fetch_client.go  go.mod  go.sum  migrate_market_tables.go  migrate_tenant_rbac.go  r.py  refactor_tests.py  test_subscription_api.ps1
basaltpass-backend/sdk/python/: README.md  pyproject.toml
basaltpass-backend/sdk/python/basaltpass_s2s/: __init__.py  client.py  exceptions.py  models.py
basaltpass-docs/: build_log.txt  build_log_cleanup.txt  build_log_cleanup_utf8.txt  (+5 more)
(+1781 files in other folders)
