[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basaltpass-s2s"
version = "0.1.0"
description = "BasaltPass S2S Python SDK"
authors = [{name = "BasaltBase"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/BasaltBase/BasaltPass"
